<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">No Item found, create some</string>
    <string name="no_description">No description</string>
    <string name="category_overview">Overview</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">unsaved changes</string>
    <string name="discard">discard</string>
    <string name="keep_editing">keep editing</string>


    <string name="hint_item_name">Product name</string>
    <string name="hint_item_desc">Product description</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Product Price</string>
    <string name="hint_sold">Products Sold</string>

    <string name="editor_activity_title_new_item">New Product</string>
    <string name="editor_activity_title_edit_Item">Edit Product</string>
    <string name="editor_delete_item_failed">Delete failed</string>
    <string name="editor_delete_item_successful">Product deleted</string>
    <string name="editor_delete_Items_failed">Delete failed</string>
    <string name="editor_insert_Item_successful">Product Inserted</string>
    <string name="editor_update_Item_successful">Product Updated</string>
    <string name="editor_insert_Item_failed">Insert Failed</string>

    <string name="delete_all_items_dialog_msg">Delete all Items?</string>
    <string name="delete_dialog_msg">Delete message</string>
    <string name="delete">Delete</string>

    <string name="product_no_name">Product Name needed</string>
    <string name="menu_settings">settings</string>
    <string name="empty_desc">Please entry Product description</string>
    <string name="no_price">Please enter product price</string>
    <string name="no_quantity">Please add product quantity</string>
    <string name="no_photo">Pleas take a photo of the product</string>
</resources>
