<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_product_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_item_name"
        android:inputType="textCapWords" />

    <!-- Description field -->
    <EditText
        android:id="@+id/edit_product_desc"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_item_desc"
        android:inputType="textCapWords" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/minus_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:onClick="decrement"
            android:text="-" />


        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_quantity"
            android:inputType="number"/>

        <Button
            android:id="@+id/plus_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_product_price"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_price"
        android:inputType="number"/>

    <!-- Sold field -->
    <EditText
        android:id="@+id/edit_product_sold"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_sold"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/insert"
            android:text="INSERT"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:text="DELETE"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order"
            android:text="ORDER MORE"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <ImageView android:id="@+id/image_view"
        android:layout_height="match_parent"
        android:src="@drawable/ic_photo_camera_black_24dp"
        android:layout_width="match_parent">
    </ImageView>

</LinearLayout>
